Fixed spacing, positioning on multimedia page.

--- a/app/assets/stylesheets/multimedia.css.scss
+++ b/app/assets/stylesheets/multimedia.css.scss
@@ -43,17 +43,39 @@
     }
   }
   .info-area{
+    position: relative;
+    ul.nav-tabs a {
+      color: black;
+    }
     .mini{
       font-size:  10px;
     }
-    .spacer {
-      margin-bottom: 8px;
+    .subscribe-btn {
+      position: absolute;
+      top: 18px;
+      right: 19px;
     }
-    .tab-content{
-      padding: 5px 0 5px 100px;
+    .list-group-item {
+      border: 0;
+      border-bottom: 1px solid #DDD;
+      margin-bottom: 0;
     }
-    dl{
-      padding-bottom: 60px;
+    .list-group-item:last-child {
+      border-bottom: none;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .list-group-item:first-child {
+      border-top-right-radius: 0;
+      border-top-left-radius: 0;
+    }
+    .panel-override, .panel-body-override {
+      border-radius: 0;
+      padding: 0;
+    }
+    .panel {
+      border-top: none;
+      border-radius: 0;
     }
     dt{
       text-align: left;
@@ -67,9 +89,7 @@
     }
     .list-group{
       margin-bottom: 0;
-      margin-top: 10px;
-      overflow: scroll;
-      max-height: 480px;
+      border-radius: 0;
       a:hover{
         background-color: #232323;
         color: #fff;
